[package]
name = "shui"
version = "0.1.0"
authors = ["Boscop <kingboscop@gmail.com>"]

[dependencies]
glium = "0.15"
nalgebra = "0.10"
asprim = "0.1"
num = "0.1"
rusttype = "0.2" #{ path = 'D:\projects\forks\rusttype' }
unicode-normalization = "0.1"
#euclid = "*"
#lazy_static = "*"
derive-new = "0.3"

[profile.dev]
codegen-units = 4
#opt-level = 0

[profile.release]
codegen-units = 4
#opt-level = 3
